Mobile preview and layout fix
> Added config to host server locally so I can preview the app on my phone
> fixed the uneven layout of the dishes in dish-list

--- a/recipes/src/App.css
+++ b/recipes/src/App.css
@@ -31,7 +31,7 @@ html{
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   margin: 20px;
   padding: 20px;
   background-color: rgb(46, 46, 46);
